Verify native AOT distributions across entry points